trying to fix svg stretching on ios

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -3,6 +3,7 @@
     background-color:#1B1B1E;
     height: 100vh;
     color: #ffffff;
+    width: 100vw;
 }
 
 .experience-wrapper .content-section{
@@ -41,6 +42,7 @@
 .card {
     height: 20vw;
     width: 35vw;
+    background-size: cover;
     background-size: 100% 100%;
     box-shadow: 0px 3px 7px #1a1a1a;
 }
